--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -5,12 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/shop/static/css/mainStyle.css">
-    <link rel="stylesheet" href="/shop/static/css/base.css">
-    <link rel="stylesheet" href="/shop/static/css/basket.css">
-    <link rel="stylesheet" href="/shop/static/css/bas.css">
-    <link rel="stylesheet" href="/shop/static/css/filter.css">
-    <link rel="stylesheet" href="/shop/static/css/product_page.css">
+    <link rel="stylesheet" href="shop/static/css/mainStyle.css">
+    <link rel="stylesheet" href="shop/static/css/base.css">
+    <link rel="stylesheet" href="shop/static/css/basket.css">
+    <link rel="stylesheet" href="shop/static/css/bas.css">
+    <link rel="stylesheet" href="shop/static/css/filter.css">
+    <link rel="stylesheet" href="shop/static/css/product_page.css">
     <title>{% block title %}Default title{% endblock title %}</title>
 </head>
 <body>
@@ -97,9 +97,9 @@
         </div>
 
 </footer>
-<script charset="utf-8" src="/shop/static/js/jQ.js" ></script>
-    <script charset="utf-8" src="/shop/static/js/menu.js"></script>
-    <script charset="utf-8" src="/shop/static/js/filter.js"></script>
-    <script charset="utf-8" src="/shop/static/js/product_photo.js"></script>
+<script charset="utf-8" src="shop/static/js/jQ.js" ></script>
+    <script charset="utf-8" src="shop/static/js/menu.js"></script>
+    <script charset="utf-8" src="shop/static/js/filter.js"></script>
+    <script charset="utf-8" src="shop/static/js/product_photo.js"></script>
 </body>
 </html>
