--- a/store/templates/storage_base.html
+++ b/store/templates/storage_base.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/shop/static/css/mainStyle.css">
-    <link rel="stylesheet" href="/shop/static/css/base.css">
-    <link rel="stylesheet" href="/shop/static/css/basket.css">
-    <link rel="stylesheet" href="/shop/static/css/bas.css">
+    <link rel="stylesheet" href="shop/static/css/mainStyle.css">
+    <link rel="stylesheet" href="shop/static/css/base.css">
+    <link rel="stylesheet" href="shop/static/css/basket.css">
+    <link rel="stylesheet" href="shop/static/css/bas.css">
     <title>{% block title %}Default title{% endblock title %}</title>
 </head>
 <body>
@@ -81,7 +81,7 @@
             </div>
 
         </footer>
-    <script charset="utf-8" src="/shop/static/js/jQ.js" ></script>
-    <script charset="utf-8" src="/shop/static/js/menu.js"></script>
+    <script charset="utf-8" src="shop/static/js/jQ.js" ></script>
+    <script charset="utf-8" src="shop/static/js/menu.js"></script>
 </body>
 </html>
